[tool.poetry]
name = "fgpyo"
version = "0.8.0"
description = "Python bioinformatics and genomics library"
authors = ["Nils Homer", "Tim Fennell", "Nathan Roach"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fulcrumgenomics/fgpyo"
repository = "https://github.com/fulcrumgenomics/fgpyo"
keywords = ["bioinformatics"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
	"Topic :: Software Development :: Documentation",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
attrs = ">=19.3.0"
pysam = ">=0.22.1"
typing_extensions = { version = ">=3.7.4", python = "<3.12" }
numpy = [
  {version = "^1.26.4", python = ">=3.12"},
  {version = "^1.25.2", python = ">=3.9,<3.12"},
  {version = "^1.24.4", python = "<3.9"}
]
strenum = "^0.4.15"

[tool.poetry.group.dev.dependencies]
# dependencies for linting, style checking, and unit testing
mypy = ">=1.7.0"
pytest = ">=7.4.0"
pytest-cov = ">=2.8.1"
ruff = "0.4.8"
setuptools = ">=68.0.0"

[tool.poetry.group.docs.dependencies]
# dependencies for building docs 
mkdocs-autorefs = { version = ">=0.5.0" }
mkdocs-include-markdown-plugin = { version = ">=6.0.1" }
mkdocs-material = { version = ">=9.2.8" }
mkdocs-table-reader-plugin = { version = ">=2.0.1" }
mkdocs = { version = ">=1.5.2" }
mkdocs-gen-files = { version = ">=0.5.0" }
mkdocs-literate-nav = { version = ">=0.6.1" }
mkdocs-section-index = { version = ">=0.3.9" }
mkdocstrings-python = { version = ">=1.6.2" }
mkdocstrings = { version = ">=0.23.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length    = 100
target-version = "py38"
output-format  = "full"

[tool.ruff.lint]
select    = ["C901", "B", "E", "F", "I", "W", "Q"]
ignore    = ["E203", "E701"]
unfixable = ["B"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
python_version              = 3.8
strict_optional             = false
check_untyped_defs          = true
disallow_incomplete_defs    = true
disallow_untyped_calls      = true
disallow_untyped_decorators = true
disallow_untyped_defs       = true
no_implicit_optional        = true
warn_no_return              = true
warn_redundant_casts        = true
warn_return_any             = true
warn_unreachable            = true
warn_unused_configs         = true
warn_unused_ignores         = true
enable_error_code           = "ignore-without-code"
