[project]
name = "fgpyo"
version = "1.4.0"
description = "Python bioinformatics and genomics library"
authors = [
    { name = "Nils Homer" },
    { name = "Tim Fennell" },
    { name = "Nathan Roach" },
]
readme = "README.md"
license = "MIT"
keywords = ["bioinformatics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9.0,<4.0"
dependencies = [
    "attrs>=19.3.0",
    "typing_extensions>=4.12.2 ; python_version < '3.13'",
    "strenum>=0.4.15,<0.5",
    "zlib-ng>=0.5.1",
]

[project.optional-dependencies]
pysam = [
    "pysam>=0.22.1",
]
all = [
    "pysam>=0.22.1",
]

[project.urls]
Homepage = "https://github.com/fulcrumgenomics/fgpyo"
Repository = "https://github.com/fulcrumgenomics/fgpyo"
"Bug Tracker" = "https://github.com/fulcrumgenomics/fgpyo/issues"

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "pytest>=7.4.0",
    "pytest-cov>=2.8.1",
    "pytest-doctestplus>=1.0.0",
    "ruff==0.13.2",
    "setuptools>=68.0.0",
    "poethepoet ~=0.37",
]
docs = [
    "mkdocs-autorefs>=0.5.0",
    "mkdocs-include-markdown-plugin>=6.0.1",
    "mkdocs-material>=9.2.8",
    "mkdocs-table-reader-plugin>=2.0.1",
    "mkdocs>=1.5.2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-section-index>=0.3.9",
    "mkdocstrings-python>=1.6.2",
    "mkdocstrings>=0.23.0",
    "numpy>=1.26.4,<2 ; python_version >= '3.12'",
    "numpy>=1.25.2,<2 ; python_version >= '3.9' and python_version < '3.12'",
    "numpy>=1.24.4,<2 ; python_version < '3.9'",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length    = 100
target-version = "py39"
output-format  = "full"

[tool.ruff.lint]
select    = ["C901", "B", "E", "F", "I", "W", "Q"]
ignore    = ["E203", "E701"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
# E402: Module level import not at top of file - required for optional pysam dependency check
"fgpyo/sam/__init__.py" = ["E402"]
"fgpyo/sam/builder.py" = ["E402"]
"fgpyo/sam/clipping.py" = ["E402"]
"fgpyo/vcf/__init__.py" = ["E402"]
"fgpyo/vcf/builder.py" = ["E402"]
"fgpyo/fastx/__init__.py" = ["E402"]
"fgpyo/fasta/sequence_dictionary.py" = ["E402"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
files                       = ["./"]
strict_optional             = false
check_untyped_defs          = true
disallow_incomplete_defs    = true
disallow_untyped_calls      = true
disallow_untyped_decorators = true
disallow_untyped_defs       = true
no_implicit_optional        = true
warn_no_return              = true
warn_redundant_casts        = true
warn_return_any             = true
warn_unreachable            = true
warn_unused_configs         = true
warn_unused_ignores         = true
enable_error_code           = "ignore-without-code"
exclude                     = ["site/", "docs/"]

[tool.coverage.report]
exclude_lines = [
    "pragma: not covered",
    "@overload"
]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths  = "tests"
addopts    = [
    "--verbosity=2",
    "-r=sx",
    "--color=yes",
    "--import-mode=importlib",
    "--cov",
    "--doctest-plus",
]
doctest_plus = "enabled"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"

[tool.poe.tasks]
fix-format = "ruff format"
fix-lint   = "ruff check --fix"

fix-all.ignore_fail = "return_non_zero"
fix-all.sequence    = [
    "fix-format",
    "fix-lint"
]

check-lock     = "uv lock --check"
check-format   = "ruff format --check --diff"
check-lint     = "ruff check"
check-tests    = "pytest"
check-doctests = "pytest --doctest-plus --doctest-only fgpyo"
check-typing   = "mypy"

check-all.ignore_fail = "return_non_zero"
check-all.sequence    = [
    "check-lock",
    "check-format",
    "check-lint",
    "check-typing",
    "check-tests",
    "check-doctests"
]

fix-and-check-all.ignore_fail = "return_non_zero"
fix-and-check-all.sequence    = [
    "check-lock",
    "fix-format",
    "fix-lint",
    "check-typing",
    "check-tests",
    "check-doctests"
]

build-docs = "mkdocs build --strict"